# voice-typer

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build_git_bash.sh  build_msi.sh  imgui.ini  main.cpp  opencode.json  package.sh  run.bat  run.sh  shell.bat  system.h  test.bat  whisper_report.md
.claude/: settings.json  settings.local.json  tasks.md
docs/: AGENTS.md  tasks.md
packaging/: VoiceTyper.wxs
src/: audio_pipeline.h  control.h  imgui_main.cpp  imgui_ui.h  main.cpp  platform.h  platform_win32.h  qt.h  resources.rc  settings.h  sounds.h  state.h  system.h  ui.h  whisper_wrapper.h
